# music-curator-agent

./: .gitignore  PRD.md  README.md  dry_run_adapters.py  test_spotify.py
.hermes/plans/: 2026-05-16_184500-build-shane-lane.md
backend/: .env.example  README.md  config.py  ingestion.py  observability.py  pyproject.toml
backend/adapters/: base.py  mock.py  registry.py  types.py
backend/adapters/lastfm/: __init__.py
backend/adapters/musicbrainz/: __init__.py
backend/adapters/spotify/: __init__.py  audio_features.py
backend/adapters/tidal/: __init__.py
backend/adapters/ytmusic/: __init__.py
backend/api/: main.py
backend/api/routes/: auth_tidal.py  feedback.py  jobs.py  playlists.py  providers.py  recommendations.py
backend/db/: models.py  session.py  types.py
backend/feedback/: scoring.py
backend/lane_extraction/: __init__.py
backend/music_curator_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/pipeline/: __init__.py
backend/recommendation/: discovery.py  features.py  playlist.py  scoring.py
backend/scheduler/: dag.py  runner.py
backend/sessions/: __init__.py
backend/tests/: conftest.py  test_api.py  test_auth_tidal_routes.py  test_config.py  test_db_types.py  test_discovery.py  test_feedback.py  test_ingestion.py  test_lastfm_adapter.py  test_playlist.py  test_scheduler.py  test_scoring.py  test_skip_window.py  test_spotify_audio_features.py
docs/: next-phase-plan.md  recommendations.md  scaffold-plan.md
hermes-skill/: SKILL.md
mcp-server/: server.py
